Revert Maven layout — use flat src/ structure for native VS Code support
Moves all sources back to src/{engine,model,View,exceptions,tests}/
and resources to src/Resources/icons/. Removes pom.xml. Adds
.vscode/settings.json + launch.json for direct Zulu FX runs
(--add-modules flags included; no Maven required).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>